erDiagram
    USER {
        int id PK
        string name
        string role
    }
    PRODUCT {
        int id PK
        string name
        decimal price
    }
    ORDER {
        int id PK
        int waiter_id FK
        string status
        datetime createdAt
    }
    ORDER_ITEM {
        int id PK
        int order_id FK
        int product_id FK
        int quantity
    }

    ORDER ||--o{ ORDER_ITEM : has
    USER ||--o{ ORDER : creates
    PRODUCT ||--o{ ORDER_ITEM : included_in
